update ui, clean code and fix rx

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TDT_Music</string>
+    <string name="app_label">Search</string>
+    <string name="search_hint">Music</string>
 </resources>
