--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TDT_Music</string>
     <string name="app_label">Search</string>
     <string name="search_hint">Music</string>
+
+    <string name="youtube_id">AIzaSyBE-8j4c1hviqwENsua7mKJAWSPsGNDPME</string>
 </resources>
