--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="search_hint">Music</string>
 
     <string name="youtube_id">AIzaSyBE-8j4c1hviqwENsua7mKJAWSPsGNDPME</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
